<resources>
    <string name="app_name">oop-lab-2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ellipse">Ellipse</string>
    <string name="action_square">Square</string>
    <string name="action_rectangle">Rectangle</string>
    <string name="action_smoothline">Smooth line</string>
    <string name="action_line">Line</string>
</resources>