<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.gmariotti.android.example.shapefinger.MainActivity" >

    <item android:id="@+id/action_line"
        android:title="@string/action_line"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_smoothline"
        android:title="@string/action_smoothline"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item android:id="@+id/action_rectangle"
        android:title="@string/action_rectangle"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_square"
        android:title="@string/action_square"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_ellipse"
        android:title="@string/action_ellipse"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>